--- a/01. Responsive-Web-Design-Certification/08. Responsive-Web-Design-Projects/05. Build a Personal Portfolio Webpage/style.css
+++ b/01. Responsive-Web-Design-Certification/08. Responsive-Web-Design-Projects/05. Build a Personal Portfolio Webpage/style.css
@@ -1,4 +1,184 @@
-*{
-    margin:0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+
+}
+
+:root {
+  --main-color: #11324d;
+  --font-color: #ffffff;
+  --light-color: #c2d9ff;
+  --back-color: #2c2e43;
+}
+
+/* NAVBAR STARTS */
+
+#navbar {
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10vh;
+  background: var(--main-color);
+}
+ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+
+.links {
+  display: block;
+  font-size: 20px;
+  padding: 20px;
+  text-decoration: none;
+  color: var(--font-color);
+}
+
+/* NAVBAR ENDS */
+
+/* WELCOME SECTION STARTS */
+
+.welcome-section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient(to right, #c2d9ff, #6b7aa1);
+  color: var(--main-color);
+
+}
+
+.intro {
+  font-size: 40px;
+}
+.intro-para {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+/* WELCOME SECTION ENDS */
+
+/* PROJECT SECTION */
+
+#projects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: var(--back-color);
+  color: var(--font-color);
+  flex-direction: column;
+}
+
+.project-text {
+  font-size: 2rem;
+  border-bottom: 5px solid var(--font-color);
+  padding: 40px 0 10px 0px;
+}
+
+.cards-div {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.project-title{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 15px;
+}
+.project-image{
+  height: 300px;
+  width: 400px;
+}
+
+.project-link{
+  text-decoration: none;
+  background-color: var(--main-color);
+  color: var(--font-color);
+  margin: 0 40px 0 40px;
+}
+
+.submit{
+  margin-top: 70px;
+  cursor:pointer;
+  height: 2.8rem;
+  width: 9rem;
+  color: var(--font-color);
+  background-color: rgb(43, 43, 43);
+  font-size: 1.1rem;
+}
+.submit:hover{
+  background-color: var(--font-color);
+  color: rgb(43, 43, 43);
+  transition: 0.5s ease-in;
+  font-weight: bold;
+}
+
+button{
+  background-color: transparent;
+  border: transparent;
+  margin-bottom: 50px;
+}
+
+
+footer {
+  font-weight: 300;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 2rem;
+  background: var(--main-color);
+  border-top: 4px solid var(--light-color);
+  color: var(--font-color);
+}
+
+footer > p {
+  margin: 2rem;
+}
+
+
+@media only screen and (max-width: 300px){
+
+  .intro{
+    font-size: 25px;
+  }
+  .project-link{
+    margin: 20px 40px 40px 40px;
+  }
+  .project-text{
+    font-size: 1rem;
+  }
+	
+}
+
+/* For very small screen */
+@media (max-width: 425px){
+
+  .project-text{
+    font-size: 1.1rem;
+  }
+  .project-image{
+    height: 200px;
+    width: 200px;
+  }
+
+  .project-link{
+    margin-top: 20px;
+  }
+
+  footer{
+    flex-direction: column;
+    text-align: center;
+  }
 }
